# statema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  tests_and_coverage.yml
statema/: __init__.py  errors.py  point.py  store.py
statema/utils/: exception_escaping.py
